@@ -9,6 +9,8 @@
   to aid installation outside of the top-directory of a virtual host.
 - Refactored ezcMvcController to allow easier overloading by inherited classes.
 - Fixed a bug in action method name generation in the controller.
+- Fixed a bug where the Content-Language header could not be set to anything
+  else but en-GB with the HTTP response writer.
 - Fixed issue #13772: Changed the controller to require an action method.
 - Fixed issue #13773: Added a check for the return type for controller actions,
   and throw an exception when it's neither an ezcMvcResult or
